Set height of closed menu bar to 0 so that it does not overlap content. Fixes bug #4923.
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/feedit/trunk@1407 743128fe-103e-dd11-99c4-001b210b3e58

--- a/feeditadvanced/res/css/fe_edit_closed.css
+++ b/feeditadvanced/res/css/fe_edit_closed.css
@@ -5,6 +5,7 @@
 	margin: 0;
 	padding: 2px;
 	width: 100%;
+	height: 0;
 	z-index: 9999;
 	font-family: Helvetica, Arial, sans-serif;
 }
